# padpad.software

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO  TODO.md  build.rs  padpad.rc
.github/workflows/: release.yaml
sandbox/config-manager/: main.rs
sandbox/dashboard/: main.rs
sandbox/gui/: main.rs
sandbox/interaction/: main.rs
sandbox/log/: main.rs
sandbox/serial-transceiver/: main.rs
sandbox/tray/: main.rs
src/: config.rs  constants.rs  lib.rs  log.rs  main.rs  tcp.rs  utility.rs
src/application/: mod.rs
src/dashboard/: main.rs
src/dashboard/application/: application.rs  mod.rs  theme.rs  utility.rs  widgets.rs
src/service/: config_manager.rs  interaction.rs  mod.rs  serial.rs  tcp.rs  tray.rs
