[package]
name = "padpad-software"
version = "0.1.0"
edition = "2021"
default-run = "serial-transceiver"

[dependencies]
dirs = "5.0.1"
eframe = "0.28.1"
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
serde = { version = "1.0.204", features = ["derive"] }
serialport = "4.4.0"
toml = "0.8.16"

[[bin]]
name = "serial-transceiver"
path = "sandbox/serial-transceiver/main.rs"

[[bin]]
name = "config-manager"
path = "sandbox/config-manager/main.rs"

[[bin]]
name = "tray"
path = "sandbox/tray/main.rs"
