[package]
name = "padpad-software"
version = "0.1.0"
edition = "2021"
default-run = "tray"

[dependencies]
dirs = "5.0.1"
eframe = "0.28.1"
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
serde = { version = "1.0.204", features = ["derive"] }
serialport = "4.4.0"
toml = "0.8.16"
image = "0.25.5"
tray-item = "0.10.0"

[target.'cfg(target_os = "linux")'.dependencies.tray-item]
version = "0.10.0"
features = ["libappindicator"]

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[build-dependencies]
embed-resource = "2.3"

[[bin]]
name = "serial-transceiver"
path = "sandbox/serial-transceiver/main.rs"

[[bin]]
name = "config-manager"
path = "sandbox/config-manager/main.rs"

[[bin]]
name = "tray"
path = "sandbox/tray/main.rs"

